--- a/messages.yml
+++ b/messages.yml
@@ -18,105 +18,96 @@
 # Translated by koteczek227aa/X_koteczek_X/Catauq Yes i have 3 names on discord
 # #######################################################################################################################
 
-command-cooldown-header: '&fPlayer cooldown %player% &8(&7%amount%&8)'
-command-cooldown-empty: '&f%player% <error>has no cooldown.'
+# Komendy Cooldown
+command-cooldown-header: '&fCooldown gracza %player% &8(&7%amount%&8)'
+command-cooldown-empty: '&f%player% <error>nie ma cooldownu.'
 command-cooldown-line:
   type: WITHOUT_PREFIX
   message: '&f%key% <secondary>- &7%createdAt% <secondary>- <success>%timeLeft% <secondary>-
-    <hover:show_text:''&fClick to remove the cooldown''><click:run_command:''/cooldown
-    delete %player% %key%''>&8[<error>ᴅᴇʟᴇᴛᴇ&8]</click></hover>'
-command-cooldown-not-found: '&f%cooldown% <error>was not found.'
-command-cooldown-delete: <success>You just removed the cooldown &f%cooldown% <success>from
+    <hover:show_text:''&fKliknij, aby usunąć cooldown''><click:run_command:''/cooldown
+    delete %player% %key%''>&8[<error>USUŃ&8]</click></hover>'
+command-cooldown-not-found: '&f%cooldown% <error>nie został znaleziony.'
+command-cooldown-delete: <success>Właśnie usunąłeś cooldown &f%cooldown% <success>dla
   &n%player%&r<success>.
-command-cooldown-create: <success>You just created the cooldown &f%key% <success>for
+command-cooldown-create: <success>Właśnie utworzyłeś cooldown &f%key% <success>dla
   &n%player%&r<success>.
-command-item-empty: <error>You have no item in your hand.
-command-item-clear: <success>You have cleared this item's name
-command-item-set: <success>You have renamed your held item to &f%name%<success>.
-command-item-lore-add: <success>You just added the line &f%text%<success>.
-command-item-lore-set: <success>You just set line %line% to &f%text%<success>.
-command-item-lore-clear: <success>You just clear the item lore.
-command-item-lore-set-error: <error>Can’t find the line &f%line%<error>.
-command-give-error: <error>Can’t find the item &f%item%<error>.
-command-give: <success>You just gave &n&fx1 %item%&r <success>to player &f%player%<success>.
-command-give-all: <success>You just gave &n&fx1 %item%&r <success>to online player.
-command-power-tool-error-item: <error>You have no item in your hand.
-command-power-tool-error-reset: <error>This item has no recorded command.
-command-power-tool-info: <success>You just put the command &f/%command%<success> on
-  the item &f%item<success>.
-command-power-tool-reset: <success>You have just deleted the command on the item &f%item<success>.
-mailbox-remove-full: <error>You must have space in your inventory to retrieve an item.
-mailbox-remove-expire: <error>You can no longer retrieve this item, it has expired.
+
+# Komendy Przedmiotów
+command-item-empty: <error>Nie masz przedmiotu w ręku.
+command-item-clear: <success>Wyczyściłeś nazwę tego przedmiotu.
+command-item-set: <success>Zmieniłeś nazwę trzymanego przedmiotu na &f%name%<success>.
+command-item-lore-add: <success>Właśnie dodałeś linię &f%text%<success>.
+command-item-lore-set: <success>Ustawiłeś linię %line% na &f%text%<success>.
+command-item-lore-clear: <success>Wyczyściłeś lore przedmiotu.
+command-item-lore-set-error: <error>Nie można znaleźć linii &f%line%<error>.
+
+# Komendy Przekazywania Przedmiotów
+command-give-error: <error>Nie można znaleźć przedmiotu &f%item%<error>.
+command-give: <success>Przekazałeś &n&fx1 %item%&r <success>graczowi &f%player%<success>.
+command-give-all: <success>Przekazałeś &n&fx1 %item%&r <success>wszystkim online graczom.
+
+# Komendy Narzędzi Specjalnych
+command-power-tool-error-item: <error>Nie masz przedmiotu w ręku.
+command-power-tool-error-reset: <error>Ten przedmiot nie ma zarejestrowanej komendy.
+command-power-tool-info: <success>Ustawiłeś komendę &f/%command%<success> na przedmiocie &f%item<success>.
+command-power-tool-reset: <success>Usunąłeś komendę z przedmiotu &f%item<success>.
+
+# Komendy Skrzynki Pocztowej
+mailbox-remove-full: <error>Musisz mieć miejsce w ekwipunku, aby odebrać przedmiot.
+mailbox-remove-expire: <error>Nie możesz już odebrać tego przedmiotu, jego ważność wygasła.
 mailbox-add:
   type: ACTION
-  message: <success>An item has just been added to your mailbox &8(&f/mail&8)
-hologram-create-error: <error>Hologram &f%name% <error>already exists.
+  message: <success>Przedmiot został dodany do twojej skrzynki pocztowej &8(&f/mail&8)
+
+# Komendy Hologramów
+hologram-create-error: <error>Hologram &f%name% <error>już istnieje.
 hologram-create:
   type: WITHOUT_PREFIX
   messages:
-  - <success>You just created the hologram &f%name%<success>.
-  - '&7Use &n<click:run_command:''/hologram edit %name%''>/hologram edit %name%</click>&r&7
-    command to edit the hologram'
-hologram-delete: <success>Hologram &f%name% <success>has been deleted.
-hologram-doesnt-exist: <error>Hologram &f%name% <error>doesn't exist.
-hologram-is-not-a-text: <error>Hologram &f%name% <error>is not a text hologram.
-hologram-is-not-a-block: <error>Hologram &f%name% <error>is not a block hologram.
-hologram-is-not-a-item: <error>Hologram &f%name% <error>is not an item hologram.
-hologram-add-line: <success>You just added a line to the hologram &f%name%<success>.
-hologram-set-line: <success>You just set the line &f%line%<success> to the hologram
-  &f%name%<success>.
-hologram-insert-before-line: <success>You just set a new line before the line &f%line%<success>
-  to the hologram &f%name%<success>.
-hologram-insert-after-line: <success>You just set a new line after the line &f%line%<success>
-  to the hologram &f%name%<success>.
-hologram-line-doesnt-exist: <error>The line &f%line% <error>does not exist for the
-  hologram &f%name%<error>.
-hologram-remove-line: <success>You just removed the line &f%line%<success> from the
-  hologram &f%name%<success>.
-hologram-scale: <success>You just changed the scale of the hologram &f%name% <success>to
-  &7%x%&8, &7%y%&8, &7%z%<success>.
-hologram-translation: <success>You just changed the translation of the hologram &f%name%
-  <success>to &7%x%&8, &7%y%&8, &7%z%<success>.
-hologram-move-here: <success>You just teleported the hologram &f%name%<success> to
-  your position.
-hologram-move-to: <success>You just teleported the hologram &f%name% <success>to &7%x%&8,
-  &7%y%&8, &7%z%<success>.
-hologram-billboard: <success>You just changed the billboard of the hologram &f%name%<success>
-  to &f%billboard%<success>.
-hologram-text-alignment: <success>You just changed the text alignment of the hologram
-  &f%name%<success> to &f%textAlignment%<success>.
-hologram-yaw: <success>You just changed the yaw of the hologram &f%name%<success>
-  to &f%yaw%<success>.
-hologram-pitch: <success>You just changed the pitch of the hologram &f%name%<success>
-  to &f%pitch%<success>.
-hologram-text-background: <success>You just changed the background color of the hologram
-  &f%name%<success> to &f%color%<success>.
-hologram-text-background-error: <error>Could not parse background color.
-hologram-text-shadow: <success>You set the text shadow to &f%textshadow% <success>for
-  the hologram &f%name%<success>.
-hologram-see-through: <success>You set the see-through to &f%seethrough% <success>for
-  the hologram &f%name%<success>.
-hologram-shadow-strength: <success>You set the shadow strength to &f%shadow% <success>for
-  the hologram &f%name%<success>.
-hologram-shadow-radius: <success>You set the shadow radius to &f%shadow% <success>for
-  the hologram &f%name%<success>.
-hologram-view-distance: <success>You set the view distance to &f%distance% <success>for
-  the hologram &f%name%<success>.
-hologram-list-empty: <error>There is no hologram, to create one please use the command
-  &f/holo create <name>
+  - <success>Utworzyłeś hologram &f%name%<success>.
+  - '&7Użyj &n<click:run_command:''/hologram edit %name%''>/hologram edit %name%</click>&r&7
+    aby edytować hologram'
+hologram-delete: <success>Hologram &f%name% <success>został usunięty.
+hologram-doesnt-exist: <error>Hologram &f%name% <error>nie istnieje.
+hologram-is-not-a-text: <error>Hologram &f%name% <error>nie jest tekstowym hologramem.
+hologram-is-not-a-block: <error>Hologram &f%name% <error>nie jest blokowym hologramem.
+hologram-is-not-a-item: <error>Hologram &f%name% <error>nie jest przedmiotowym hologramem.
+hologram-add-line: <success>Dodałeś linię do hologramu &f%name%<success>.
+hologram-set-line: <success>Ustawiłeś linię &f%line%<success> w hologramie &f%name%<success>.
+hologram-insert-before-line: <success>Ustawiłeś nową linię przed linią &f%line%<success> w hologramie &f%name%<success>.
+hologram-insert-after-line: <success>Ustawiłeś nową linię za linią &f%line%<success> w hologramie &f%name%<success>.
+hologram-line-doesnt-exist: <error>Linia &f%line% <error>nie istnieje w hologramie &f%name%<error>.
+hologram-remove-line: <success>Usunąłeś linię &f%line%<success> z hologramu &f%name%<success>.
+hologram-scale: <success>Zmieniono skalę hologramu &f%name% <success>na &7%x%&8, &7%y%&8, &7%z%<success>.
+hologram-translation: <success>Zmieniono położenie hologramu &f%name% <success>na &7%x%&8, &7%y%&8, &7%z%<success>.
+hologram-move-here: <success>Przeteleportowałeś hologram &f%name%<success> do swojej pozycji.
+hologram-move-to: <success>Przeteleportowałeś hologram &f%name% <success>na pozycję &7%x%&8, &7%y%&8, &7%z%<success>.
+hologram-billboard: <success>Zmieniono tablicę hologramu &f%name%<success> na &f%billboard%<success>.
+hologram-text-alignment: <success>Zmieniono wyrównanie tekstu hologramu &f%name%<success> na &f%textAlignment%<success>.
+hologram-yaw: <success>Zmieniono yaw hologramu &f%name%<success> na &f%yaw%<success>.
+hologram-pitch: <success>Zmieniono pitch hologramu &f%name%<success> na &f%pitch%<success>.
+hologram-text-background: <success>Zmieniono kolor tła hologramu &f%name%<success> na &f%color%<success>.
+hologram-text-background-error: <error>Nie można przetworzyć koloru tła.
+hologram-text-shadow: <success>Ustawiono cień tekstu na &f%textshadow% <success>dla hologramu &f%name%<success>.
+hologram-see-through: <success>Ustawiono przezroczystość na &f%seethrough% <success>dla hologramu &f%name%<success>.
+hologram-shadow-strength: <success>Ustawiono siłę cienia na &f%shadow% <success>dla hologramu &f%name%<success>.
+hologram-shadow-radius: <success>Ustawiono promień cienia na &f%shadow% <success>dla hologramu &f%name%<success>.
+hologram-view-distance: <success>Ustawiono zasięg widzenia na &f%distance% <success>dla hologramu &f%name%<success>.
+hologram-list-empty: <error>Brak hologramów, aby utworzyć, użyj komendy &f/holo create <name>
 hologram-list:
   type: WITHOUT_PREFIX
-  message: '&f%name% &8- &7%world%: %x%, %y%, %z% &8- <hover:show_text:''&7Click to
-    be teleported to this hologram''><click:run_command:''/holo tp %name%''><green>ᴛᴇʟᴇᴘᴏʀᴛ</click>
-    </hover><hover:show_text:''<red>Click to delete this hologram''><click:suggest_command:''/holo
-    delete %name%''><red>ᴅᴇʟᴇᴛᴇ</click></hover>'
-hologram-item-error: <error>You can't use air for this hologram.
-hologram-item: <success>You just modified the item of the hologram &f%name%<success>.
-hologram-block: <success>You just modified the block of the hologram &f%name%<success>
-  to &f%material%<success>.
-scoreboard-disable: <error>You just disabled the scoreboard.
-scoreboard-enable: <success>You just enabled the scoreboard.
-command-baltop-error: <error>Can’t find the economy &f%name%<error>.
+  message: '&f%name% &8- &7%world%: %x%, %y%, %z% &8- <hover:show_text:''&7Kliknij, aby zostać przeniesionym do tego hologramu''><click:run_command:''/holo tp %name%''><green>TELEPORTUJ</click>
+    </hover><hover:show_text:''<red>Kliknij, aby usunąć ten hologram''><click:suggest_command:''/holo delete %name%''><red>USUŃ</click></hover>'
+hologram-item-error: <error>Nie możesz użyć powietrza dla tego hologramu.
+hologram-item: <success>Zmieniono przedmiot hologramu &f%name%<success>.
+hologram-block: <success>Zmieniono blok hologramu &f%name%<success> na &f%material%<success>.
+
+# Komendy Tablic Wyników
+scoreboard-disable: <error>Wyłączyłeś tablicę wyników.
+scoreboard-enable: <success>Włączyłeś tablicę wyników.
+
+# Komenda Baltop
+command-baltop-error: <error>Nie można znaleźć ekonomii &f%name%<error>.
 command-baltop-header:
   type: WITHOUT_PREFIX
   message: '#00f986ᴍᴏsᴛ ᴍᴏɴᴇʏ &8(&f%page%&8/&7%maxPage%&8) <click:run_command:''/baltop
